# space-wrangler

./: .confluence.example  .env.example  .flake8  .gitattributes  .gitignore  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  SECURITY.rst  default.mk  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  sonar-project.properties  space_exporter.py  template.html
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml
confluence/: __init__.py  __main__.py  args.py  cli.py  commands.py  common.py  confluence.py  env_loader.py  exceptions.py  exporter.py  http_client.py  logger.py  owner_metadata.py  page_metadata.py  space_exporter.py  space_metadata.py  template.py
requirements/: requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
swrangler/: __init__.py  __main__.py  cli.py  commands.py  common.py  confluence.py  env_loader.py  exceptions.py  logger.py  owner_metadata.py  page_metadata.py  space_exporter.py  space_metadata.py  template.py
tests/: conftest.py  test_args.py  test_cli.py  test_commands.py  test_common.py  test_confluence.py  test_env_loader.py  test_exceptions.py  test_exporter.py  test_http_client.py  test_logger.py  test_main.py  test_owner_metadata.py  test_page_metadata.py  test_space_exporter.py  test_space_metadata.py
