# This file is part of the confluence.
#
# Copyright (c) 2024 airSlate, Inc.
#
# For the full copyright and license information, please view
# the LICENSE file that was distributed with this source code.

# Project-wide configuration file, can be used for package metadata and other
# tool configurations.

[metadata]
license_files = LICENSE
description_file = README.md
long_description_content_type = text/markdown
